[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Retrieves the list of AMP URLs (and equivalent AMP Cache URLs) for a given list of public URL(s). "
edition = "2018"
name = "google_api_rust_client_acceleratedmobilepageurl_v1"
version = "0.2.1+20210222"
