[dependencies]
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "An API for controlling access to data by Google personnel."
edition = "2018"
name = "google_api_rust_client_accessapproval_v1"
version = "0.1.0+20210219"
