[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Views Ad Experience Report data, and gets a list of sites that have a significant number of annoying ads."
edition = "2018"
name = "google_api_rust_client_adexperiencereport_v1"
version = "0.2.1+20210213"
