[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Admin SDK lets administrators of enterprise domains to view and manage resources like user, groups etc. It also provides audit and usage reports of domain."
edition = "2018"
name = "google_api_rust_client_admin_directory_v1"
version = "0.2.1+20210216"
