[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "The AdMob API allows publishers to programmatically get information about their AdMob account. "
edition = "2018"
name = "google_api_rust_client_admob_v1"
version = "0.2.1+20210224"
