[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Accesses AdSense publishers' inventory and generates performance reports."
edition = "2018"
name = "google_api_rust_client_adsense_v1_4"
version = "0.2.1+20201002"
