[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Generates performance reports, generates ad codes, and provides publisher management capabilities for AdSense Hosts."
edition = "2018"
name = "google_api_rust_client_adsensehost_v4_1"
version = "0.2.2+20200930"
