[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Views and manages your Google Analytics data."
edition = "2018"
name = "google_api_rust_client_analytics_v3"
version = "0.2.2+20190807"
