[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Accesses Analytics report data."
edition = "2018"
name = "google_api_rust_client_analyticsreporting_v4"
version = "0.2.2+20210223"
