[dependencies]
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Automates Android zero-touch enrollment for device resellers, customers, and EMMs."
edition = "2018"
name = "google_api_rust_client_androiddeviceprovisioning_v1"
version = "0.1.0+20210217"
