[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Automates Android zero-touch enrollment for device resellers, customers, and EMMs."
edition = "2018"
name = "google_api_rust_client_androiddeviceprovisioning_v1"
version = "0.2.1+20210223"
