[dependencies]
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Manages the deployment of apps to Android Enterprise devices."
edition = "2018"
name = "google_api_rust_client_androidenterprise_v1"
version = "0.1.0+20210220"
