[dependencies]
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "The Android Management API provides remote enterprise management of Android devices and apps."
edition = "2018"
name = "google_api_rust_client_androidmanagement_v1"
version = "0.1.0+20210215"
