[dependencies]
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Lets Android application developers access their Google Play accounts."
edition = "2018"
name = "google_api_rust_client_androidpublisher_v3"
version = "0.1.0+20210223"
