[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Provisions and manages developers' App Engine applications."
edition = "2018"
name = "google_api_rust_client_appengine_v1alpha"
version = "0.2.2+20210219"
