[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Store and manage build artifacts in a scalable and integrated service built on Google infrastructure."
edition = "2018"
name = "google_api_rust_client_artifactregistry_v1beta2"
version = "0.2.1+20210212"
