[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "A data platform for customers to create, manage, share and query data."
edition = "2018"
name = "google_api_rust_client_bigquery_v2"
version = "0.2.2+20210215"
