[dependencies]
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Allows users to manage BigQuery connections to external data sources."
edition = "2018"
name = "google_api_rust_client_bigqueryconnection_v1beta1"
version = "0.1.0+20210213"
