[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Schedule queries or transfer external data from SaaS applications to Google BigQuery on a regular basis."
edition = "2018"
name = "google_api_rust_client_bigquerydatatransfer_v1"
version = "0.2.1+20210206"
