[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "A service to modify your BigQuery flat-rate reservations."
edition = "2018"
name = "google_api_rust_client_bigqueryreservation_v1beta1"
version = "0.2.1+20210217"
