[dependencies]
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Administer your Cloud Bigtable tables and instances."
edition = "2018"
name = "google_api_rust_client_bigtableadmin_v2"
version = "0.1.0+20210127"
