[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Administer your Cloud Bigtable tables and instances."
edition = "2018"
name = "google_api_rust_client_bigtableadmin_v2"
version = "0.2.2+20210127"
