[dependencies]
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "The management interface for Binary Authorization, a system providing policy control for images deployed to Kubernetes Engine clusters. "
edition = "2018"
name = "google_api_rust_client_binaryauthorization_v1beta1"
version = "0.1.0+20210212"
