[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "The Blogger API provides access to posts, comments and pages of a Blogger blog."
edition = "2018"
name = "google_api_rust_client_blogger_v3"
version = "0.2.2+20210220"
