[dependencies]
derive_builder = "0.9"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[package]
authors = ["Ezra Celli <ezra@ezracelli.com>"]
description = "Enables bots to fetch information and perform actions in Google Chat."
edition = "2018"
name = "google_api_rust_client_chat_v1"
version = "0.2.2+20210217"
